# llmmas-otel

./: .gitignore  .gitmodules  CLAUDE.md  FAULT_SPEC.md  README.md  pyproject.toml
demos/chatdev-ollama/: README.md
demos/chatdev-ollama/data/: programdev_dataset.json  programdev_sample3.json
demos/chatdev-ollama/docker/: compose.yaml
demos/chatdev-ollama/scripts/: run_programdev_dataset_otel.py
docker/: compose.yaml
docs/: integration_recipe.md
examples/: eval_goal_a.py  m0_demo.py  m1_demo.py
jaeger_export/: FULL_TRACE_ID_1.json  FULL_TRACE_ID_2.json  FULL_TRACE_ID_3.json
logs/: chatdev_trace_20260306_191122.jsonl  chatdev_trace_20260309_151333.jsonl  chatdev_trace_20260309_155548.jsonl  chatdev_trace_20260309_165921.jsonl  chatdev_trace_20260309_173510.jsonl  chatdev_trace_20260309_180509.jsonl
src/llmmas_otel/: __init__.py  bootstrap.py  decorators.py  message_store.py  semconv.py  span_factory.py
src/llmmas_otel/injection/: __init__.py  api.py  config.py  engine.py  exceptions.py  faults.yaml  loader.py  matcher.py  spec.py  spec_engine.py  types.py
src/llmmas_otel/injection/fixtures/: a2a_templates.py
src/llmmas_otel/integrations/: hyperagent.py
tests/: test_injection_m2.py
tests/injection/: test_a2a_confident_wrong.py  test_a2a_hallucinate.py  test_a2a_instruction_loss.py  test_a2a_truncate.py  test_llm_malformed_shipped.py  test_llm_problem_reframe.py  test_llm_prompt_inject.py  test_mutate_input.py  test_phase0_smoke.py  test_tool_malformed_shipped.py  test_tool_swap_result.py
